RESOLVED FIXED67837
Web Inspector: [Chromium] Valgrind signals use of uninitialized field in InspectorStyleSheetForInlineStyle
https://bugs.webkit.org/show_bug.cgi?id=67837
Summary Web Inspector: [Chromium] Valgrind signals use of uninitialized field in Insp...
Alexander Pavlov (apavlov)
Reported 2011-09-09 03:28:46 PDT
m_isStyleTextValid is not initialized in the ctor and seemingly results in valgrind errors. Upstreaming http://crbug.com/87380
Attachments
Alexander Pavlov (apavlov)
Comment 1 2011-09-09 03:40:29 PDT
Joseph Pecoraro
Comment 2 2011-09-12 11:59:34 PDT
Good catch and fix. I just happened to open up the bug and see no attached patch but a committed changeset. I think maybe this change should still have had a reviewer (even simple, non-build issues typically have reviews) but certainly a ChangeLog. In either case keep up the good fixes!
Alexander Pavlov (apavlov)
Comment 3 2011-09-13 00:23:51 PDT
(In reply to comment #2) > Good catch and fix. > > I just happened to open up the bug and see no attached patch but a committed > changeset. I think maybe this change should still have had a reviewer (even > simple, non-build issues typically have reviews) but certainly a ChangeLog. > In either case keep up the good fixes! Well, the change seemed trivial, so Pavel who was on vacation and was having difficulties doing the actual review (i.e. setting r+), said that it could surely be committed unreviewed (even though the change had a reviewer de facto, and there were no other reviewers around). I'll do my best finding a real reviewer from now on.
Joseph Pecoraro
Comment 4 2011-09-13 09:27:34 PDT
It wasn't so much the review (I trust your judgement with the small change) it was the Missing ChangeLog that I wanted to call out. Either way thanks for the explanation!
Joseph Pecoraro
Comment 5 2011-09-13 09:29:46 PDT
Also changes like this are easy to get a quick review from someone in #webkit if you need one. Or people like Darin are always checking the list of patches for review and might review without even being CC'd!
Joseph Pecoraro
Comment 6 2011-09-20 09:56:20 PDT
(In reply to comment #4) > It wasn't so much the review (I trust your judgement with the small change) > it was the Missing ChangeLog that I wanted to call out. Either way thanks > for the explanation! As you rightly pointed out, there was a ChangeLog. I don't know how I missed that =(. Thanks for following up.
Note You need to log in before you can comment on or make changes to this bug.