Unreviewed, Chromium valgrind build fix.

Web Inspector: [Chromium] Valgrind signals use of uninitialized field in InspectorStyleSheetForInlineStyle
https://bugs.webkit.org/show_bug.cgi?id=67837

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyleSheetForInlineStyle::InspectorStyleSheetForInlineStyle):

Canonical link: https://commits.webkit.org/83737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94844 268f45cc-cd09-0410-ab3c-d52691b4dbfc